syntax = "proto3";

package serverPackage;

service ServerService {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc Login	   (LoginRequest) returns (LoginReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

// Login messages definition
message LoginRequest {
  string user = 1;
  string password = 2;
}

message LoginReply {
  string message = 1;
}

